2004-12-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/editor/eobject.c, main/editor/kgame.c,
	main/editor/segment.c, main/gameseg.h, main/physics.c: Pass the
	extra two parameters to get_seg_masks.

2004-12-19  Bradley Bell  <btb@icculus.org>

	* ui/Makefile.am: fix ui Makefile.am

2004-12-19  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* include/u_mem.h: prototype for strdup with MPW

	* main/laser.c: abort weapon fire if unable to create object

	* include/ui.h, main/bm.c, main/dumpmine.c, main/editor/editor.h,
	main/editor/medwall.h, main/editor/segment.c, main/gamesave.c,
	unused/ui/icon.c: replace byte with sbyte

	* include/func.h, ui/barbox.c, ui/button.c, ui/checkbox.c,
	ui/file.c, ui/func.c, ui/gadget.c, ui/harderr.c, ui/icon.c,
	ui/inputbox.c, ui/keypad.c, ui/keypress.c, ui/keytrap.c,
	ui/listbox.c, ui/medfunc.c, ui/menu.c, ui/menubar.c, ui/message.c,
	ui/mouse.c, ui/number.c, ui/popup.c, ui/radio.c, ui/scroll.c,
	ui/ui.c, ui/uidraw.c, ui/userbox.c, ui/window.c,
	unused/ui/barbox.c, unused/ui/button.c, unused/ui/checkbox.c,
	unused/ui/file.c, unused/ui/func.c, unused/ui/func.h,
	unused/ui/gadget.c, unused/ui/harderr.c, unused/ui/icon.c,
	unused/ui/inputbox.c, unused/ui/keypad.c, unused/ui/keypress.c,
	unused/ui/keytrap.c, unused/ui/listbox.c, unused/ui/medfunc.c,
	unused/ui/menu.c, unused/ui/menubar.c, unused/ui/message.c,
	unused/ui/mouse.c, unused/ui/number.c, unused/ui/popup.c,
	unused/ui/radio.c, unused/ui/scroll.c, unused/ui/ui.c,
	unused/ui/uidraw.c, unused/ui/userbox.c, unused/ui/window.c: moved
	unused/ui to ui

	* ui/Makefile.am: added Makefile.am for ui

	* main/editor/Makefile.am, main/editor/autosave.c,
	main/editor/centers.c, main/editor/centers.h,
	main/editor/curves.c, main/editor/eglobal.c,
	main/editor/ehostage.c, main/editor/ehostage.h,
	main/editor/elight.c, main/editor/eobject.c,
	main/editor/eobject.h, main/editor/eswitch.c,
	main/editor/eswitch.h, main/editor/fixseg.c, main/editor/func.c,